# EEL-agentic-ai-bootcamp

./: .gitignore  404.html  README.md  cspell.json  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
additional-lab-guides/: index.html
conclusion/: index.html
day-one/: index.html
day-two/: index.html
demo-use-cases/governance-demo/: index.html
demo-use-cases/hashi-demo/: index.html
demo-use-cases/maximo-supply-chain-demo/: index.html
docs/: additional-lab-guides.md  conclusion.md  day-one.md  day-two.md  index.md  overview.md  show-and-tell.md  troubleshooting.md
files/: FundManager.html
labs/lab2/: README.md  ai_service.py  index.html  pyproject.toml
labs/lab2/assistance_crew/: crew.py
labs/lab2/assistance_crew/config/: agents.yaml  tasks.yaml
labs/lab2/assistance_crew/tools/: __init__.py  custom_tool.py  portfolio_retriever_tool.py
labs/lab2/assistance_crew/tools/cache/: john_doe_portfolio_retriever_cache.txt
labs/lab2/risk-assessment-agent/: ai_service.py
labs/lab2/risk-assessment-agent/assistance_crew/: crew.py
labs/lab2/risk-assessment-agent/assistance_crew/config/: agents.yaml  tasks.yaml
labs/lab2/risk-assessment-agent/scripts/: deploy.py
labs/lab2/scripts/: deploy.py
labs/lab2/wealth-advisor-agent/assistance_crew/: crew.py
labs/lab2/wealth-advisor-agent/assistance_crew/config/: agents.yaml
labs/lab2/wealth-advisor-agent/assistance_crew/tools/: custom_tool.py  websearch_tool.py
labs/lab2/wealth-advisor-agent/scripts/: deploy.py
labs/lab3/risk-assessment-agent/: README.md  pyproject.toml
labs/lab3/risk-assessment-agent/assistance_crew/config/: tasks.yaml
labs/lab3/risk-assessment-agent/assistance_crew/tools/: portfolio_retriever_tool.py
overview/: index.html
search/: search_index.json
show-and-tell/: index.html
site/: index.html  sitemap.xml
troubleshooting/: index.html
(+116 files in other folders)
